--- a/css/styles.css
+++ b/css/styles.css
@@ -1,170 +1,147 @@
-header {
-  z-index: 1;
-  position: relative;
-  margin-top: 500px;
+body, html {
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
-
-
-
+header {
+    z-index: 1;
+    position: absolute;
+    top: 500px;
+}
 nav ul {
-  list-style: none;
-  text-align: center;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
 nav li {
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.2em;
-  line-height: 40px;
-  height: 40px;
-  border-bottom: 1px solid #888;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.2em;
+    line-height: 40px;
+    height: 40px;
+    border-bottom: 1px solid #888;
 }
- 
 nav a {
-  text-decoration: none;
-  color: #FFF;
-  display: block;
-  transition: .3s background-color;
+    text-decoration: none;
+    color: #FFF;
+    display: block;
+    transition: .3s background-color;
 }
- 
 nav a:hover {
-  background-color: none;
-  color: #ffab4f;
-
+    background-color: none;
+    color: #ffab4f;
 }
- 
 nav a.active {
-  background-color: none;
-  color: #ffab4f;
-  cursor: default;
+    background-color: none;
+    color: #ffab4f;
+    cursor: default;
 }
- 
-@media screen and (min-width: 600px) {
-  nav li {
-    width: 120px;
-    border-bottom: none;
+/*@media screen and (min-width: 600px) {*/
+
+nav li {
+    /*width: 120px;*/
+
+border-bottom: none;
     height: 50px;
     line-height: 50px;
     font-size: 1.4em;
-  }
- 
-  nav li {
+}
+nav li {
     display: inline-block;
     margin-right: -4px;
-  }
-
-  .hero-image {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-image: url(http://i.imgur.com/ZhSHike.jpg);
-      background-size: cover;
-      background-color: grey;
-      background-attachment: fixed;
-      margin-top: 0px;
-      background-position: top center;
-    }
-
-.hero-container {
-  height: 550px;
-  margin-top: -550px;
-  z-index: 0;
 }
+.hero-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url(http://i.imgur.com/ZhSHike.jpg);
+    background-size: cover;
+    background-color: grey;
+    background-attachment: fixed;
+    margin-top: 0px;
+    background-position: top center;
+}
+.hero-container {
+    height: 100%;
+    /*margin-top: -550px;*/
 
+z-index: 0;
+}
 .hero-text h2 {
-  font-family: 'montserrat_bold', arial, sans-serif
-  font-weight: 900;
-  color: white;
-  text-transform: uppercase;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 6rem;
-  transform: translate(-50%, -50%);
-  
-
+    font-family: 'montserrat_bold', arial, sans-serif font-weight: 900;
+    color: white;
+    text-transform: uppercase;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 6rem;
+    transform: translate(-50%, -50%);
 }
 hr {
-  color: white;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-top: 50px;
-
+    color: white;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 50px;
 }
 .hero-text p {
-font-family: Lora, Arial, Sans-serif;
-  font-weight: 100;
-  color: white;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 1.5rem;
-  transform: translate(-50%, -50%);
-  margin-top: 50px;
-  font-style: italic;
-  opacity: 0.8;
-
+    font-family: Lora, Arial, Sans-serif;
+    font-weight: 100;
+    color: white;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 1.5rem;
+    transform: translate(-50%, -50%);
+    margin-top: 50px;
+    font-style: italic;
+    opacity: 0.8;
 }
+.content-first {
+    width: 100%;
+    /*height: 100%;*/
 
- .content-first {
-     
-      top: 100%;
-      width: 100%;
-      height: 100%;
-      background: #FFF;
-      padding: 50px;
-      color: ;
-      
-
-    }
-
-
+background: #FFF;
+    padding: 50px;
+    color: ;
+}
 .content-second {
-      top: 100%;
-      width: 100%;
-      height: 100%;
-      background: #333;
-      padding: 50px;
-      color: white;
-      background-image: url(http://i.imgur.com/gAtJb4M.png); ;
-      background-size: cover;
-      background-attachment: fixed;
-  
-      
+    width: 100%;
+    /*height: 100%;*/
 
-    }
-
-.content-third {
-      top: 100%;
-      width: 100%;
-      height: 100%;
-      background: #084d8f;
-      padding: 50px;
-      color: white;
-      padding-top: 150px;
+background: #333;
+    padding: 50px;
+    color: white;
+    background-image: url(http://i.imgur.com/gAtJb4M.png);
+    ;
+    background-size: cover;
+    background-attachment: fixed;
 }
+.content-third {
+    width: 100%;
+    /*height: 100%;*/
 
+background: #084d8f;
+    padding: 50px;
+    color: white;
+    padding-top: 150px;
+}
 .content-third strong {
-color: #ffab4f;
-
+    color: #ffab4f;
 }
 .content-third h2 {
-  text-align: center;
-  color: #ffab4f;
+    text-align: center;
+    color: #ffab4f;
 }
-
 .block-text {
-  text-align: center;
-  padding-top: 200px;
-
+    text-align: center;
+    /*padding-top: 200px;*/
 }
-
-    .layer-background {
+.layer-background {
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
     top: 0;
@@ -173,196 +150,161 @@ color: #ffab4f;
     height: 100%;
     padding-bottom: 50px;
 }
-
 .content-second h3 {
+    font-size: 33px;
+    *//*padding-bottom: 105px;*/
 
-  font-size: 33px;
-  padding-bottom: 105px;
-  padding-top: 150px;
-   padding-left: 140px;
-    padding-right: 140px;
-    line-height: 1.6em;
+/*padding-top: 150px;*/
+
+/*padding-left: 140px;*/
+
+/*padding-right: 140px;*/
+
+line-height: 1.6em;
     font-family: 'opensanslight'
 }
-
 .content-second strong {
-  color: #084d8f;
+    color: #084d8f;
 }
-
-.footer-distributed{
-  background-color: #000;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
-  width: 100%;
-  text-align: left;
-  font: bold 16px sans-serif;
-
-  padding: 55px 50px;
+.footer-distributed {
+    background-color: #000;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: bold 16px sans-serif;
+    padding: 55px 50px;
 }
-
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-  display: inline-block;
-  vertical-align: top;
+.footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
+    display: inline-block;
+    vertical-align: top;
 }
-
 /* Footer left */
 
-.footer-distributed .footer-left{
-  width: 40%;
+.footer-distributed .footer-left {
+    width: 40%;
 }
-
 /* The company logo */
 
-.footer-distributed h3{
-  color:  #ffffff;
-  font: normal 36px 
-  margin: 0;
+.footer-distributed h3 {
+    color: #ffffff;
+    font: normal 36px margin: 0;
 }
-
-.footer-distributed h3 span{
-  color:  #5383d3;
+.footer-distributed h3 span {
+    color: #5383d3;
 }
-
 /* Footer links */
 
-.footer-distributed .footer-links{
-  color:  #ffffff;
-  margin: 20px 0 12px;
-  padding: 0;
+.footer-distributed .footer-links {
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
 }
-
-.footer-distributed .footer-links a{
-  display:inline-block;
-  line-height: 1.8;
-  text-decoration: none;
-  color:  inherit;
+.footer-distributed .footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
 }
-
-.footer-distributed .footer-company-name{
-  color:  #8f9296;
-  font-size: 14px;
-  font-weight: normal;
-  margin: 0;
+.footer-distributed .footer-company-name {
+    color: #8f9296;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
 }
-
 /* Footer Center */
 
-.footer-distributed .footer-center{
-  width: 35%;
+.footer-distributed .footer-center {
+    width: 35%;
 }
-
-.footer-distributed .footer-center i{
-  background-color:  #33383b;
-  color: #ffffff;
-  font-size: 25px;
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 42px;
-  margin: 10px 15px;
-  vertical-align: middle;
+.footer-distributed .footer-center i {
+    background-color: #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
 }
-
 footer {
-position: relative;
-
+    position: relative;
 }
-
-
-.footer-distributed .footer-center i.fa-envelope{
-  font-size: 17px;
-  line-height: 38px;
+.footer-distributed .footer-center i.fa-envelope {
+    font-size: 17px;
+    line-height: 38px;
 }
-
-.footer-distributed .footer-center p{
-  display: inline-block;
-  color: #ffffff;
-  vertical-align: middle;
-  margin:0;
+.footer-distributed .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0;
 }
-
-.footer-distributed .footer-center p span{
-  display:block;
-  font-weight: normal;
-  font-size:14px;
-  line-height:2;
+.footer-distributed .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
 }
-
-.footer-distributed .footer-center p a{
-  color:  #5383d3;
-  text-decoration: none;;
+.footer-distributed .footer-center p a {
+    color: #5383d3;
+    text-decoration: none;
+    ;
 }
-
-
 /* Footer Right */
 
-.footer-distributed .footer-right{
-  width: 20%;
+.footer-distributed .footer-right {
+    width: 20%;
 }
-
-.footer-distributed .footer-company-about{
-  line-height: 20px;
-  color:  #92999f;
-  font-size: 13px;
-  font-weight: normal;
-  margin: 0;
+.footer-distributed .footer-company-about {
+    line-height: 20px;
+    color: #92999f;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0;
 }
-
-.footer-distributed .footer-company-about span{
-  display: block;
-  color:  #ffffff;
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 20px;
+.footer-distributed .footer-company-about span {
+    display: block;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
-
-.footer-distributed .footer-icons{
-  margin-top: 25px;
+.footer-distributed .footer-icons {
+    margin-top: 25px;
 }
-
-.footer-distributed .footer-icons a{
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-  background-color:  #33383b;
-  border-radius: 2px;
-
-  font-size: 20px;
-  color: #ffffff;
-  text-align: center;
-  line-height: 35px;
-
-  margin-right: 3px;
-  margin-bottom: 5px;
+.footer-distributed .footer-icons a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background-color: #33383b;
+    border-radius: 2px;
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 35px;
+    margin-right: 3px;
+    margin-bottom: 5px;
 }
-
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 880px) {
-
-  .footer-distributed{
-    font: bold 14px sans-serif;
+    .footer-distributed {
+        font: bold 14px sans-serif;
+   }
+   .footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
+       display: block;
+       width: 100%;
+       margin-bottom: 40px;
+       text-align: center;
   }
-
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right{
-    display: block;
-    width: 100%;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-
-  .footer-distributed .footer-center i{
-    margin-left: 0;
-  }
-
+  .footer-distributed .footer-center i {
+      margin-left: 0;
+ }
 }
-
 /*----------------------------------------------------------------------------*\
   Headhesive Specific Styles
 /*----------------------------------------------------------------------------*/
@@ -379,34 +321,31 @@ position: relative;
  * }
  */
 
-
 .banner--clone {
+    /* Required styles */
 
-  /* Required styles */
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  margin-top: 0;
-  text-align; center;
-  width: 100%;
+position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    margin-top: 0;
+    text-align;
+    center;
+    width: 100%;
+    /* Additional styles */
 
-  /* Additional styles */
-  background-color: rgba(4, 16, 181, 0.8);
+background-color: rgba(4, 16, 181, 0.8);
+    /* Translate -100% to move off screen */
 
-  /* Translate -100% to move off screen */
-  -webkit-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-          transform: translateY(-100%);
+-webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+    /* Animations */
 
-  /* Animations */
-  -webkit-transition: all 600ms ease-in-out;
-     -moz-transition: all 600ms ease-in-out;
-          transition: all 600ms ease-in-out;
-
+-webkit-transition: all 600ms ease-in-out;
+    -moz-transition: all 600ms ease-in-out;
+    transition: all 600ms ease-in-out;
 }
-
-
 /**
  * Headhesive stick
  * > `stick` class for the cloned element:
@@ -418,15 +357,14 @@ position: relative;
  *   }
  * }
  */
+
 .banner--stick {
+    /* Translate back to 0%; */
 
-  /* Translate back to 0%; */
-  -webkit-transform: translateY(0%);
-      -ms-transform: translateY(0%);
-          transform: translateY(0%);
+-webkit-transform: translateY(0%);
+    -ms-transform: translateY(0%);
+    transform: translateY(0%);
 }
-
-
 /**
  * Headhesive unstick
  * > `unstick` class for the cloned element:
@@ -438,9 +376,37 @@ position: relative;
  *   }
  * }
  */
+
 .banner--unstick {
-  /* Not required to use, but could be useful to have */
+    /* Not required to use, but could be useful to have */
+}
+@media screen and (min-width: 600px) {
+    .content-second h3 {
+        font-size: 33px;
+        padding-bottom: 105px;
+        padding-top: 150px;
+        padding-left: 140px;
+        padding-right: 140px;
+        line-height: 1.6em;
+   }
+   .block-text {
+       text-align: center;
+       padding-top: 200px;
+  }
+
+
+.slide {
+height: 100%;
 }
 
 
 
+
+
+
+
+
+
+
+
+}
