--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,9 @@ body, html {
 header {
     z-index: 1;
     position: absolute;
-    top: 500px;
+    top: 75%;
+    width: 100%;
+    word-spacing: 10px;
 }
 nav ul {
     list-style: none;
@@ -75,7 +77,7 @@ z-index: 0;
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 6rem;
+    font-size: 4rem;
     transform: translate(-50%, -50%);
 }
 hr {
@@ -334,7 +336,7 @@ position: fixed;
     width: 100%;
     /* Additional styles */
 
-background-color: rgba(4, 16, 181, 0.8);
+background-color: rgba(4, 16, 181, 1.0);
     /* Translate -100% to move off screen */
 
 -webkit-transform: translateY(-100%);
@@ -398,9 +400,6 @@ background-color: rgba(4, 16, 181, 0.8);
 .slide {
 height: 100%;
 }
-
-
-
 
 
 
