--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,7 @@ nav li {
 .hero-container {
     height: 100%;
     /*margin-top: -550px;*/
-
-z-index: 0;
+    z-index: 0;
 }
 .hero-text h2 {
     font-family: 'montserrat_bold', arial, sans-serif font-weight: 900;
@@ -107,9 +106,13 @@ hr {
     width: 100%;
     /*height: 100%;*/
 
-background: #FFF;
+    background: #FFF;
     padding: 50px;
     color: ;
+}
+
+.icon-background {
+    color: #084d8f;
 }
 .content-second {
     width: 100%;
@@ -393,18 +396,36 @@ background-color: rgba(0, 0, 0, 0.3);
    }
    .block-text {
        text-align: center;
-       padding-top: 200px;
+      
   }
-
 
 .slide {
 height: 100%;
 }
 
 
+.fa-users  {
+    color: white;
 
+}
 
+.fa-cogs {
+    color: white;
+}
 
+.fa-line-chart {
+    color: white;
+    float: right;
+}
+
+.icon-row {
+    text-align: center;
+}
+
+.headline-row {
+    text-align: center;
+    padding-bottom: 20px;
+}
 
 
 
