--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,10 @@ nav a {
 nav a:hover {
     background-color: none;
     color: #ffab4f;
-}
+}d
 nav a.active {
     background-color: none;
-    color: #ffab4f;
+    /* color: #ffab4f; */
     cursor: default;
 }
 /*@media screen and (min-width: 600px) {*/
@@ -52,6 +52,8 @@ nav li {
     display: inline-block;
     margin-right: -4px;
 }
+
+/* Hero Image Area */
 .hero-image {
     position: absolute;
     width: 100%;
@@ -79,15 +81,7 @@ nav li {
     font-size: 4rem;
     transform: translate(-50%, -50%);
 }
-hr {
-    color: white;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: 50px;
-}
+
 .hero-text p {
     font-family: Lora, Arial, Sans-serif;
     font-weight: 100;
@@ -102,50 +96,7 @@ hr {
     font-style: italic;
     opacity: 0.8;
 }
-.content-first {
-    width: 100%;
-    /*height: 100%;*/
 
-    background: #FFF;
-    padding: 50px;
-    color: ;
-}
-
-.icon-background {
-    color: #084d8f;
-}
-.content-second {
-    width: 100%;
-    /*height: 100%;*/
-
-background: #333;
-    padding: 50px;
-    color: white;
-    background-image: url(http://i.imgur.com/gAtJb4M.png);
-    ;
-    background-size: cover;
-    background-attachment: fixed;
-}
-.content-third {
-    width: 100%;
-    /*height: 100%;*/
-
-background: #084d8f;
-    padding: 50px;
-    color: white;
-    padding-top: 150px;
-}
-.content-third strong {
-    color: #ffab4f;
-}
-.content-third h2 {
-    text-align: center;
-    color: #ffab4f;
-}
-.block-text {
-    text-align: center;
-    /*padding-top: 200px;*/
-}
 .layer-background {
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
@@ -155,22 +106,83 @@ background: #084d8f;
     height: 100%;
     padding-bottom: 50px;
 }
+hr {
+    border-top: 1px solid #8c8b8b;
+    text-align: center;
+    width: 40%;
+}
+
+/* First Content Area */
+.content-first {
+    width: 100%;
+    background: #FFF;
+    padding: 50px;
+    color: ;
+}
+
+.block-text {
+       text-align: center;  
+  }
+
+.slide {
+height: 100%;
+}
+
+
+.fa-stack-1x  {
+    color: #ffab4f;
+}
+
+.fa-stack {
+    color: #084d8f;
+}
+.headline-row {
+    text-align: center;
+}
+
+/* Second Content Area */
+.content-second {
+    width: 100%;
+    background: #333;
+    padding: 50px;
+    color: white;
+    background-image: url(http://i.imgur.com/gAtJb4M.png);
+    ;
+    background-size: cover;
+    background-attachment: fixed;
+}
 .content-second h3 {
     font-size: 33px;
-    *//*padding-bottom: 105px;*/
-
-/*padding-top: 150px;*/
-
-/*padding-left: 140px;*/
-
-/*padding-right: 140px;*/
-
-line-height: 1.6em;
-    font-family: 'opensanslight'
-}
+    font-style: italic;
+    }
 .content-second strong {
     color: #084d8f;
 }
+
+
+/* Third Content Area */
+.content-third strong {
+    color: #ffab4f;
+}
+.content-third h2 {
+    text-align: center;
+    color: #ffab4f;
+}
+.block-text {
+    text-align: center;
+
+    line-height: 1.6em; 
+    font-family: 'opensanslight'
+}
+.content-third {
+    width: 100%;
+    background: #084d8f;
+    padding: 50px;
+    color: white;
+    padding-top: 150px;
+}
+
+/*  Footer */
 .footer-distributed {
     background-color: #000;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -309,6 +321,7 @@ footer {
   .footer-distributed .footer-center i {
       margin-left: 0;
  }
+
 }
 /*----------------------------------------------------------------------------*\
   Headhesive Specific Styles
@@ -385,6 +398,8 @@ background-color: rgba(0, 0, 0, 0.3);
 .banner--unstick {
     /* Not required to use, but could be useful to have */
 }
+
+/* Media Query Area */
 @media screen and (min-width: 600px) {
     .content-second h3 {
         font-size: 33px;
@@ -393,39 +408,6 @@ background-color: rgba(0, 0, 0, 0.3);
         padding-left: 140px;
         padding-right: 140px;
         line-height: 1.6em;
-   }
-   .block-text {
-       text-align: center;
-      
-  }
-
-.slide {
-height: 100%;
-}
-
-
-.fa-users  {
-    color: white;
-
-}
-
-.fa-cogs {
-    color: white;
-}
-
-.fa-line-chart {
-    color: white;
-    float: right;
-}
-
-.icon-row {
-    text-align: center;
-}
-
-.headline-row {
-    text-align: center;
-    padding-bottom: 20px;
-}
 
 
 
