fixed overlapping issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,11 +123,11 @@ hr {
 .block-text {
        text-align: center;  
   }
-
+/*
 .slide {
 height: 100%;
 }
-
+*/
 
 .fa-stack-1x  {
     color: #ffab4f;
